--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -35244,8 +35244,8 @@ i.icon.save-referral {
 }
 
 .r-referral-modal .authority-toggle button {
-    height: 40px;
-    width: 40px;
+    height: 45px;
+    width: 45px;
     border-radius: 50%;
     border: none;
     position: absolute;
@@ -35253,12 +35253,21 @@ i.icon.save-referral {
     transform: translate(-50%);
     background: #fff;
     box-shadow: 0 0 0 10px #dbdbdb;
-    top: -20px;
+    top: -22px;
     cursor: pointer;
+    background-image: url(../images/modal/referral-result/authority-toggle-open.svg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 30px;
 }
 
 .r-referral-modal .authority-toggle button.active {
+    height: 40px;
+    width: 40px;
     top: 20px;
+    background-image: url(../images/modal/referral-result/authority-toggle-close.svg);
+    background-size: 15px;
+
 }
 
 .r-referral-modal .authority-toggle button:focus {
@@ -35411,7 +35420,7 @@ i.icon.save-referral {
     width: 125px;
 }
 
-.r-referral-modal .modal-footer .col-3:nth-child(2) .card .card-body .checkbox-group {
+.r-referral-modal .modal-footer .col-3:nth-child(4) .card .card-body .checkbox-group {
     width: 127px;
 }
 
@@ -35419,8 +35428,8 @@ i.icon.save-referral {
     width: 95px;
 }
 
-.r-referral-modal .modal-footer .col-3:nth-child(4) .card .card-body .checkbox-group {
-    width: 84px;
+.r-referral-modal .modal-footer .col-3:nth-child(2) .card .card-body .checkbox-group {
+    width: 101px;
 }
 
 .referral-to-modal {
