--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -34791,7 +34791,7 @@ i.icon {
 }
 
 .table-active, .table-active>td, .table-active>th {
-    background-color: #cde5f7;
+    background-color: #f1f1f1;
 }
 
 .dx-g-bs4-group-panel-item-icon {
@@ -35206,7 +35206,7 @@ i.icon.internal-replication {
     display: flex;
     justify-content: flex-start;
     border: none;
-    padding-top: 0;
+    /* padding-top: 0; */
     position: relative;
 }
 
@@ -35570,4 +35570,149 @@ i.icon.internal-replication {
 
 .custom-select__indicator-separator{
     display:none;
+}
+
+[class*=RootBase-root]{
+    border:1px solid rgba(224, 224, 224, 1);
+}
+.r-main-box [class*=RootBase-root]{
+    border:none;
+}
+
+[class*=RootBase-root] *{
+    direction: rtl;
+    font-family:IRANSans_Fa!important;
+}
+[class*=MuiTableCell-root]{
+    text-align: right!important;
+    direction: rtl!important;
+}
+[class*=MuiTableRow-root]:not([class*=TableInvisibleRow-row]){
+    height: 30px;
+}
+[class*=TableFilterCell-cell] [class*=MuiInput-input]{
+    border:1px solid rgba(224, 224, 224, 1);
+    border-radius: 4px;
+    font-size:12px!important;
+}
+/* [class*=TableFilterCell-cell]{
+    padding-top: 0!important;
+    padding-bottom: 0!important;
+
+} */
+[class*=MuiListItem-button]{
+    text-align: right!important;
+    direction: rtl!important;
+    font-family:IRANSans_Fa!important;
+}
+[class*=MuiTypography-subheading]{
+    font-family:IRANSans_Fa!important;
+
+}
+[class*=MuiListItem-dense]{
+    padding:0!important
+}
+[class*=PageSizeSelector-label]{
+    padding-right:0!important; 
+    padding-left:10px; 
+}
+[class*=PageSizeSelector-selectIcon]{
+    top:6px!important;
+    left:0!important;
+    right:auto!important;
+}
+[class*=MuiSelect-select]{
+    padding-left: 1rem!important;
+}
+[class*=Pagination-rowsLabel]{
+    padding-left: 10px!important;
+    padding-right: 10px!important;
+}
+[class*=PageSizeSelector-pageSizeSelector]{
+    padding-right: 0!important;
+}
+[class*=MuiIconButton-root]{
+    height: 30px!important;
+    width: 30px!important;
+}
+[class*=GroupPanelEmptyMessage-groupInfo]{
+    font-size:13px!important;
+}
+[class*=Toolbar-toolbar]{
+    padding-left: 10px!important;
+    padding-right: 10px!important;
+}
+[class*=MuiSvgIcon-root]{
+    font-size:16px;
+}
+[class*=Pagination-button]{
+    min-height: 30px!important;
+    padding: 6px 12px!important;
+}
+[class*=Pagination-activeButton]{
+    background-color: rgba(0,0,0,.08)!important;
+}
+[class*=Pager-pager]{
+    justify-content: space-between!important;
+}
+[class*=MuiSvgIcon-root]{
+    font-size:16px!important;
+}
+[class*=Pagination-next] path {
+    transform: rotateY(180deg) translateX(-25px);
+}
+[class*=Pagination-prev] path{
+    transform: rotateY(180deg) translateX(-25px);
+}
+[class*=IconBase-groupButton] path{
+    transform: rotateY(180deg) translateX(-25px);
+}
+.custom-select__control--is-disabled{
+    background-color: #e9ecef;
+}
+[class*=MuiTableCell-body]{
+    font-size:12px!important;
+}
+[class*=MuiMenuItem-root]{
+    font-size:13px!important;
+}
+[class*=MuiCheckbox-colorSecondary]{
+    color: #3383ef!important;
+}
+[class*=MuiTooltip-popper] *{
+
+    font-family:IRANSans_Fa!important;
+}
+[class*=IconBase-groupButton]{
+    margin-right: 0!important;
+    margin-left: 8px!important;
+}
+[class*=MuiChip-deleteIcon]{
+    margin: 0 -8px 0 4px!important;
+}
+[class*=TableFilterCell-cell] select{
+    font-size:12px!important;
+}
+[class*=TableFilterCell-cell] select.form-control:not([size]):not([multiple]){
+    height:2.05rem;
+}
+[class*=TableFilterCell-cell] select.form-control:not([size]):not([multiple]):focus{
+    box-shadow:none;
+    outline:none;
+    border-color:rgba(224, 224, 224, 1); 
+}
+.btn{
+    font-size:13px!important;
+}
+[class*=ResizingControl-resizeHandle]{
+    left: 0!important;
+    right: auto!important;
+}
+.form-control{
+    padding: .375rem .75rem!important;
+}
+
+
+th[class*=MuiTableCell-root]{
+    border-bottom: 2px solid #dee2e6
 }
